<resources>
    <string name="app_name">LinkYou</string>
    <string name="main_page">MainPage</string>
    <string name="explore_page">ExplorePage</string>
    <string name="message_page">MessagePage</string>
    <string name="my_page">MyPage</string>
    <string name="my_friend_string">Friend</string>
    <string name="my_friend_bit_string">bit</string>
    <string name="my_friend_count">0</string>
    <string name="my_light_up_dynamics">light up dynamics</string>
    <string name="my_light_up_dynamics_count">0</string>
    <string name="my_light_up_dynamics_strip_string">strip</string>
    <string name="user_name">Your Name</string>
    <string name="user_city">City</string>
    <string name="user_constellation">" · Aries"</string>
    <string name="user_dynamics_count">" · %s strip"</string>
    <string name="dynamics_time">1970-01-01 10:10</string>
    <string name="dynamics_content">this is dynamics context,this is dynamics context,this is dynamics context,this is dynamics context</string>
    <string name="my_dynamics_light_up_count">0</string>
    <string name="my_dynamics_message">0</string>
    <string name="message_page_title">Message</string>
    <string name="message_example">This is a message,This is a message,This is a message</string>
    <string name="message_time">13:14</string>
    <string name="focus_string">Focus</string>
    <string name="up_to_date">UpToDate</string>
    <string name="privacy_policy_title_string">Privacy Policy</string>
    <string name="privacy_policy_content_string">Have read and agreed to the 《User Agreement》 and 《Privacy Agreement》\n In order to provide a better service experience, our application will use permissions including but not limited to gallery, network connection, notification, etc. when running. We promise to strictly abide by the privacy policy, protect the security of your personal information, and will never leak or abuse your private data.</string>
    <string name="privacy_policy_button_agree">Agree</string>
    <string name="privacy_policy_button_cancel">Exit</string>
    <string name="user_agreement_string">Click to view《User Agreement》</string>
    <string name="privacy_agreement_string">Click to view《Privacy Agreement》</string>
    <string name="sure_string">Sure</string>
    <string name="my_channel_list">My Focus Channel</string>
    <string name="edit_my_channel">Edit</string>
    <string name="more_channel_string">More Channel</string>
    <string name="channel_string">Channel</string>
    <string name="help_string">Help</string>
    <string name="login_account_string">Account</string>
    <string name="login_password_string">Password</string>
    <string name="forget_password_string">Forget Password</string>
    <string name="login_string">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="more_string">More</string>
    <string name="user_acoount_is_empty">User account is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="error_account_or_password">Error! Account or Password</string>
    <string name="choose_login_type">Choose Login Type</string>
    <string name="User_account_need_four_bit">User Account Need Four Bit</string>
    <string name="check_your_account_or_password">Check your account or password</string>
    <string name="get_dynamics_error">Get Dynamics Error</string>
    <string name="post_dynamic">Post</string>
    <string name="dynamic_input_content">Share your thoughts at the moment</string>
    <string name="maximum_image_limit">You can choose up to 9 pictures</string>
    <string name="publishing_string">Publishing...Do not exit</string>
    <string name="view_pager_items">%s/%s</string>
    <string name="save_image">Save Image</string>
    <string name="cancel_string">Cancel</string>
    <string name="reply_in_total">%s reply in total</string>
    <string name="get_detail_dynamic_error">Get detail dynamic error</string>
    <string name="shared_image">Shared Image</string>
    <string name="shared_post_time_string">%s Released in LinkYou</string>
    <string name="shared_image_string">Shared Images</string>
    <string name="check_avatar">Check your avatar</string>
    <string name="modify_avatar">Modify your avatar</string>
    <string name="check_background">Check your background</string>
    <string name="modify_background">Modify your background</string>
</resources>