<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet_dialog"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/check_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/check_background"
        android:textSize="18sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/modify_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/modify_background"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel_string"
        android:textSize="18sp" />

</LinearLayout>